--- a/src/batch/manage.org
+++ b/src/batch/manage.org
@@ -29,3 +29,9 @@ I.e. have more than 10% of security
 - Nuking host
 - Copying script files to new host
 - Sorting hosts into workers and targets
+
+** Memory Management handled by batch/memory.ts
+
+Receives all workers and tracks memory usage on them. Receives
+requests for allocating memory and responds with a set of hosts that
+can be used.
