--- a/docs/gang-management.org
+++ b/docs/gang-management.org
@@ -1,5 +1,58 @@
 * Gang Management Principles
 
+** Game Description
+
+*** Starting and Recruiting
+
+Outside of gangs require much more crime and heartbreak to create, but
+can still be a great help. Creating a Gang in other will offer more
+than other , but they will not be a way to destroy the alone.
+
+After creating a gang, you will be able to start recruiting, adding
+members to your gang as you gain Respect. While in a BitNode, your
+gang and gang member stats will not reset if you install
+augmentations.
+
+*** Respect
+
+Earned as your gang members complete tasks, Respect affects your
+gang's productivity, including your Faction Reputation (needed to buy
+augmentations from your Gang Faction), and the number of recruits you
+can have. An individual gang member's Respect is lost or reset if they
+Ascend, or are killed in a Territory Warfare clash.
+
+***Ascending
+
+When experienced enough, gang members are offered Ascension, a
+permanent boost to their stat multipliers at the cost of resetting
+their base stats and equipment to 0, and reducing your Gang Reputation
+by the same amount as that member had earned since they last Ascended.
+
+*** Equipping and Managing
+
+Buying Equipment for a gang member will give them a stat boost until
+they Ascend or are killed, at which point most equipment will reset.
+
+Augmentations you install on gang members (in the Gang Equipment
+subpage) do not reset when they Ascend.
+
+Active gang members earn stats, respect and money based on their
+current stats, their equipment, and the effects of Ascending.
+
+*** Wanted, Territory and Clashes
+
+Your gang's "Wanted Level" can make tasks much less productive, and is
+affected by the tasks assigned to gang members. "Ethical Hacking" or
+"Vigilante Justice" tasks can lower Wanted Level.
+
+"Territory Warfare" is a special task that builds Power for your
+gang. If "Territory Clashes" are enabled [see the Territory subpage of
+your Gang page], members have a chance to win or lose territory by
+clashing with other gangs. The % of Territory you control affects most
+aspects of your gang productivity.
+
+Note that gang members can die during clashes, even if your gang wins.
+
 ** Gang Basics
 
 *** Mechanics
