--- a/docs/batch-hacking.org
+++ b/docs/batch-hacking.org
@@ -43,6 +43,8 @@ Reads lifecycle updates from `MonitorClient` via `MONITOR_PORT` and displays the
 - `sow.js` grows a host to maximum money and weakens again to maintain security.
 - `harvest.ts` launches batches of hacking/weaken/grow/weaken scripts
   precisely timed to maintain the target at max money and minimumm security.
+- Use the `--port-id` flag when launching `harvest.ts` to specify a
+  control port for shutdown messages.
 - `h.js`, `g.js` and `w.js` perform individual hack, grow and weaken commands.
 
 ** Messaging Protocols
